kubernetes/apps/policy/kyverno/resources/ndots-fix.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ndots-fix
spec:
  background: false
  rules:
    - name: fix-ndots
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces:
                - argocd
                - home-assistant
                - media
                - network
                - system
                - vpn
      mutate:
        patchStrategicMerge:
          spec:
            dnsConfig:
              options:
                - name: ndots
                  value: "1"
